--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ html, body {
     width: 100%;
     display: flex;
     justify-content: space-around;
+    position: relative;
+    bottom: 10px;
 }
-
 .ratingBtn {
     width: 50px;
     height: 50px;
